--- a/test/game.html
+++ b/test/game.html
@@ -94,7 +94,7 @@
 			<!-- <div id="game"></div>
 			<div id="turn"></div> -->
 		</div>
-		<script type="text/javascript" src="file:///D:/Users/Max/Desktop/dots-and-boxes/dab.js"></script>
+		<script type="text/javascript" src="D:\Git\dots-and-boxes\dab.js"></script>
 		<script type="text/javascript">
 			var Games = [];
 			var Game = function(obj) {
@@ -102,6 +102,10 @@
 				this.id = Games.length-1;
 
 				this.game = new Dab(obj.dab);
+
+				this.game.complete = function(info) {
+					console.log(info);
+				}
 
 				this.table = document.createElement("table");
 				this.table.cellSpacing = 0;
@@ -207,7 +211,7 @@
 						turn_out += '<td style="'+
 						'background: linear-gradient(0deg, '+this.colors[i]+', '+this.colors[i]+');'+
 						'opacity: '+opacity+';'+
-						'">Player '+(i+1)+'</td>';
+						'">Player '+(i+1)+' ('+this.game.score[i]+')</td>';
 					}
 					turn_out += '</tr></table>'
 					this.div.turn.innerHTML = turn_out;
@@ -223,8 +227,8 @@
 					large: 48,
 				},
 				dab: {
-					width: 5,
-					height: 5,
+					width: 4,
+					height: 4,
 					players: 2,
 					debug: false
 				}
